--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "three": "^0.101.1",
+    "three-dragcontrols": "^0.88.2",
+    "three-gltf-loader": "^1.101.0",
+    "three-orbitcontrols": "^2.99.1",
+    "three-trackballcontrols": "0.0.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
